--- a/DPA-Files/public/index.html
+++ b/DPA-Files/public/index.html
@@ -25,8 +25,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div class="body" id="root"></div>
-    <!--
+    <div  id="root"></div>
+    <!--class="body"
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
